fix: banner image alignment on mobile (#60)
* fix: banner image alignment on mobile

* fixes #55

--- a/@antv/gatsby-theme-antv/site/components/Banner.module.less
+++ b/@antv/gatsby-theme-antv/site/components/Banner.module.less
@@ -320,13 +320,17 @@
     .teaser {
       width: 100%;
       max-width: 1200px;
-      margin-left: 0;
-      margin-right: 0;
       margin-top: auto;
+      margin-left: unset;
+      margin-right: unset;
+      right: unset;
       top: 30%;
+      display: flex;
+      justify-content: center;
       .teaserimg {
         width: 40%;
-        margin-left: 30%;
+        margin-left: unset;
+        margin-right: unset;
       }
     }
   }
@@ -358,8 +362,7 @@
       width: 100%;
       top: 5%;
       .teaserimg {
-        width: 75%;
-        margin-left: 12.5%;
+        width: 100%;
       }
     }
     .backLeftBottom {
@@ -382,7 +385,7 @@
       }
     }
     .teaser {
-      top: 12%;
+      top: 14%;
     }
   }
 }
